fixup! fixup! chore: temporarily ignore errors from htmltest

--- a/antora-playbook-for-development.yml
+++ b/antora-playbook-for-development.yml
@@ -19,7 +19,7 @@ antora:
             index_latest_only: true
             snippet_length: 142
         -   require: '@antora/collector-extension' # Single-source content from engineering repositories, see https://gitlab.com/antora/antora-collector-extension
-        -   require: ./extensions/htmltest.js # Test links in HTML, see https://docs.antora.org/antora/latest/extend/extension-tutorial/
+#        -   require: ./extensions/htmltest.js # Test links in HTML, see https://docs.antora.org/antora/latest/extend/extension-tutorial/
         -   require: '@antora/pdf-extension' # Generate monolithic AsciiDoc files, see  https://gitlab.com/antora/antora-assembler
 
 asciidoc:
