--- a/.github/workflows/build-and-validate-on-pr.yaml
+++ b/.github/workflows/build-and-validate-on-pr.yaml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build using antora # and fail on warning
         id: antora-build
-        run: CI=true antora generate antora-playbook-for-development.yml --stacktrace --log-failure-level=warn
+        run: bash -x CI=true antora generate antora-playbook-for-development.yml --stacktrace --log-failure-level=warn
 
       - name: Store pull request details for publish-netlify
         run: |
