--- a/.github/workflows/build-and-validate-on-push.yaml
+++ b/.github/workflows/build-and-validate-on-push.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build using antora
         id: antora-build
-        run: CI=true antora generate antora-playbook-for-development.yml --stacktrace --log-failure-level=warn
+        run: bash -x CI=true antora generate antora-playbook-for-development.yml --stacktrace --log-failure-level=warn
 
       - name: Upload artifact doc-content
         uses: actions/upload-artifact@v4
