--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Global Owners
-* @mkuznyetsov @gtrivedi88 @eclipse-che/ecd-che-docs-reviewers
+* @deerskindoll @mkuznyetsov @gtrivedi88 @eclipse-che/ecd-che-docs-reviewers
