Add Roo Code to the list of recommended extensions
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
       "asciidoctor.asciidoctor-vscode",
       "github.vscode-pull-request-github",
       "sugatoray.vscode-git-extension-pack",
-      "ChrisChinchilla.vale-vscode"
+      "ChrisChinchilla.vale-vscode",
+      "RooVeterinaryInc.roo-cline"
     ]
 }
