feat: Support OpenShift external IDP
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -30,8 +30,7 @@ asciidoc:
     devworkspace-id: devworkspace
     docker-cli: docker
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
-    identity-provider-legacy-id: keycloak
-    identity-provider-legacy: Keycloak
+    keycloak: Keycloak
     image-puller-cr-name: KubernetesImagePuller
     image-puller-deployment-id: kubernetes-image-puller-operator
     image-puller-deployment-name: kubernetes-image-puller
